app is displaying question properly

--- a/index.html
+++ b/index.html
@@ -19,18 +19,8 @@
     </section>
     <section id="content-box">
         <p class="quiz-description">This quiz will test your knowledge of GRE words. For each word, select the correct definition. If you need a hint, look at the sentence provided.</p>
-        <div class="begin">Let's go!</div>
+        <button type="button" class="begin">Let's go!</button>
     </main>
-    <footer>
-        <nav>
-            <ul>Navigation
-                <li><a href="index.html">Index</a></li>
-                <li><a href="question.html">Question</a></li>
-                <li><a href="feedback.html">Feedback</a></li>
-                <li><a href="finish.html">End of Quiz</a></li>
-            </ul>
-        </nav>
-    </footer>
     <script
   src="https://code.jquery.com/jquery-3.4.1.js"
   integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
