submit button working

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <ul class="question-data">
-            <li>Question 1/10</li>
+            <li>Question <span class="question-number">0</span>/10</li>
             <li>Score: 0/10 correct</li>
         </ul>
     </header>
