working on next button for displaying next question

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <ul class="question-data">
             <li>Question <span class="question-number">0</span>/10</li>
-            <li>Score: 0/10 correct</li>
+            <li>Score: <span class="your-score">0</span>/10 correct</li>
         </ul>
     </header>
     <main id="main">
