most js working (aside from score when restart), working on styles

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Start Page</title>
+    <link href="https://meyerweb.com/eric/tools/css/reset/reset.css" rel="stylesheet" type="text/css" />
     <link href="main.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
