working on styles

--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Start Page</title>
     <link href="https://meyerweb.com/eric/tools/css/reset/reset.css" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Hind+Siliguri|Josefin+Sans|Muli|Reem+Kufi|Roboto:light&display=swap" rel="stylesheet">
     <link href="main.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <header>
+        <h1 id="quiz-title">GRE Vocabulary Quiz</h1>
+    </header>
+    <main id="main">
         <ul class="question-data">
             <li>Question <span class="question-number">0</span>/10</li>
             <li>Score: <span class="your-score">0</span>/10 correct</li>
         </ul>
-    </header>
-    <main id="main">
-        <h1 id="quiz-title">GRE Vocabulary Quiz</h1>
     </section>
     <section id="content-box">
         <p class="quiz-description">This quiz will test your knowledge of GRE words. For each word, select the correct definition. If you need a hint, look at the sentence provided.</p>
