--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Start Page</title>
     <link href="https://meyerweb.com/eric/tools/css/reset/reset.css" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Hind+Siliguri|Josefin+Sans|Muli|Reem+Kufi|Roboto:light&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Hind+Siliguri|Josefin+Sans|Muli|Reem+Kufi|Roboto:thin&display=swap" rel="stylesheet">
     <link href="main.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
